--- a/interactive_fluid/styles.css
+++ b/interactive_fluid/styles.css
@@ -8,6 +8,17 @@ body{
 
 }
 
+p{
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 450;
+}
+
+nav .logo p{
+    font-weight: 700;
+}
+
+
 img{
     width: 100%;
     height: 100%;
@@ -20,8 +31,38 @@ nav, .hero-footer{
     width:100vw;
     padding:2rem;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
 }
 
 .hero-footer{
     bottom: 0;
+}
+
+section{
+    position: relative;
+    width: 100vw;
+    height: 100svh;
+    overflow: hidden;
+}
+
+.hero-logo{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+}
+.gradient-canvas {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.nav-items {
+    display: flex;
+    gap:4rem;
 }
