--- a/doughnut-rotate/style.css
+++ b/doughnut-rotate/style.css
@@ -5,14 +5,14 @@
     --dark: #000000;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 
-body{
+body {
     font-family: 'Plus Jakarta Sans', sans-serif;
     background-color: var(--dark);
 }
@@ -29,7 +29,7 @@ img {
     left: 0;
     width: 100%;
     height: 100vh;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .widget-preview-img {
@@ -38,12 +38,13 @@ img {
     height: 100%;
 }
 
-.widget-preview-img img{
+.widget-preview-img img {
     position: absolute;
     top: 50%;
     left: 50%;
     will-change: opacity;
     filter: saturate(0);
+    transform: translate(-50%, -50%);
 }
 
 .widget-title {
@@ -63,9 +64,9 @@ img {
 #widget-svg {
     position: absolute;
     top: 0;
-    left:0;
-    width:100%;
-    height: 100;;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -74,4 +75,7 @@ img {
     stroke-width: 3;
     stroke-linecap: round;
 }
-
+.spinner-segment {
+    will-change: transform;
+    transform: translateZ(0);
+}
