--- a/Scroll_Animations/drift_card/src/app/globals.css
+++ b/Scroll_Animations/drift_card/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bg: #1a1a1a;
+  --fd: #edf1e8;
 }
 
 @theme inline {
@@ -14,13 +14,57 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --bg: #0a0a0a;
+    --fd: #ededed;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--bg);
+  color: var(--fd);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+h1{
+  font-size:  7rem;
+  font-weight:  800;
+  letter-spacing: -0.3rem;
+  line-height: 1.1;
+}
+
+
+p{
+  font-size: 1.12rem;
+  font-weight: 500;
+}
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100svh;
+  background-color: var(--bg);
+  color: var(--fd);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 2rem;
+    letter-spacing: 0;
+  }
+  p{
+    font-size: 1rem;
+    
+  }
 }
