--- a/loader/loadText/style.css
+++ b/loader/loadText/style.css
@@ -58,6 +58,7 @@ p {
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
     height: 100svh;
     display: flex;
     justify-content: center;
@@ -90,4 +91,17 @@ p {
     text-transform: uppercase;
     font-size: 2.7rem;
     font-weight: 500;
+}
+
+
+
+@media (max-width: 1000px) {
+    .loader svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .loader svg .orbit-text {
+        font-size: 3rem;
+    }
 }
